# effective-haskell

./: calculator.hs  fibs.hs  typeAliases.hs  types.hs
exercises/: exercise2.hs  exercise3.hs  exercise4.hs
import-demo/: import-demo.cabal
import-demo/app/: Main.hs
module-examples/: module-examples.cabal
module-examples/src/HaskellBook/: Examples.hs
module-examples/src/HaskellBook/Examples/: UserInfo.hs
module-examples/src/HaskellBook/Examples/Introduction/: CreatingModuiles.hs
typeclasses/: CHANGELOG.md  LICENSE  typeclasses.cabal
typeclasses/app/: Main.hs
