cabal-version:      2.4
name:               import-demo
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Eixix
maintainer:         -

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable import-demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
